[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Enemies/ThePilot/PlaneFar.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/ThePilot/PlaneClose.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Enemies/ThePilot/ThePilot.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool white;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	
	if(white){
		COLOR = vec4 (1, 1, 1, color.a)
	}else{
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/white = null

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "PlaneClose",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "PlaneFar",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.0673
height = 203.999

[node name="ThePilot" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 5 )
animation = "PlaneClose"

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 5.28149, -10.28 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
